public interface EstadoPrenda {
    Double calcularPrecio(Double precioPropio);
}
