public class Nueva implements EstadoPrenda {

    @Override
    public Double calcularPrecio(Double precioPropio) {
        return precioPropio;
    }
}
