public enum TipoPrenda {
    SACO,
    PANTALON,
    CAMISA
}
